Make sure tables don't overflow width of screen.

--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -29,3 +29,9 @@ h3 {
     color: #283618;
 }
 
+/*Set some default boundaries for tables to keep from overflowing in smaller screens (i.e: Phones) */
+
+table {
+    max-width: 98vw;
+}
+
